Fixed table styling, also changed icon method.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,11 @@ tr.table-padding>td {
     padding-bottom: 30px;
 }
 
+.table-container {
+    display: flex;
+    justify-content: center;
+}
+
 body {
     /* This is to center the page */
     display: block;
